docs: complete API documentation for controllers and DTOs with Swagger and JWT security