@@ -1,10 +1,13 @@
 package com.fullstack.service.impl;
 
 import com.fullstack.dto.CategoryRequest;
+import com.fullstack.dto.CategoryResp;
 import com.fullstack.dto.CategoryResponse;
 import com.fullstack.entity.Category;
 import com.fullstack.entity.Users;
 import com.fullstack.exception.ResourceAlreadyExistsException;
+import com.fullstack.exception.ResourceNotFoundException;
+import com.fullstack.exception.UnauthorizedException;
 import com.fullstack.exception.UserNotFoundException;
 import com.fullstack.repository.CategoryRepository;
 import com.fullstack.repository.UserRepository;
@@ -40,11 +43,10 @@ public class CategoryServiceImpl implements CategoryService {
 
         Users users = userRepository.findById(userId).orElseThrow(() -> new UserNotFoundException("USER #ID NOT FOUND"));
 
-        categoryRepository.findByNameAndUsers_Id(categoryRequest.getName(), userId)
+        categoryRepository.findByNameIgnoreCaseAndUsers_Id(categoryRequest.getName(), userId)
                 .ifPresent(c -> {
                     throw new ResourceAlreadyExistsException("Category already exists");
                 });
-
         Category category = new Category();
         category.setName(categoryRequest.getName());
         category.setDescription(categoryRequest.getDescription());
@@ -59,6 +61,8 @@ public class CategoryServiceImpl implements CategoryService {
         response.setName(saved.getName());
         response.setDescription(saved.getDescription());
         response.setUserID(saved.getUsers().getId());
+        response.setUserName(users.getName());
+        response.setUserEmail(users.getEmail());
 
         return response;
     }
@@ -66,10 +70,26 @@ public class CategoryServiceImpl implements CategoryService {
     public long getLoggedInUserId() {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
         String email = authentication.getName();
-
-        Users user = userRepository.findByEmail(email);
-
+        Users user = userRepository.findByEmail(email).orElseThrow(()-> new UserNotFoundException("USER NOT FOUND"));
         return user.getId();
+    }
+
+    @Override
+    public void softDeleteCategory(Long categoryId) {
+        Long userId = getLoggedInUserId();
+        Category category = categoryRepository.findById(categoryId)
+                .orElseThrow(() -> new ResourceNotFoundException("Category not found"));
+
+        Users currentUser = userRepository.findById(userId)
+                .orElseThrow(() -> new ResourceNotFoundException("User not found"));
+
+        Users owner = category.getUsers();
+        if (owner == null || (!owner.getId().equals(currentUser.getId()) && !currentUser.isAdmin())) {
+            throw new UnauthorizedException("Not allowed to delete this category");
+        }
+
+        category.setIsDeleted(true);
+        categoryRepository.save(category);
     }
 
     @Override
@@ -80,12 +100,10 @@ public class CategoryServiceImpl implements CategoryService {
         List<CategoryResponse> responses = new ArrayList<>();
 
         Long userId = getLoggedInUserId();
-
+        Users users = userRepository.findById(userId).orElseThrow(() -> new UserNotFoundException("USER #ID NOT FOUND"));
         for (CategoryRequest request : categoryRequest) {
 
-            Users users = userRepository.findById(userId).orElseThrow(() -> new UserNotFoundException("USER #ID NOT FOUND"));
-
-            categoryRepository.findByNameAndUsers_Id(request.getName(), userId)
+            categoryRepository.findByNameIgnoreCaseAndUsers_Id(request.getName(), userId)
                     .ifPresent(c -> {
                         throw new RuntimeException("Category already exists");
                     });
@@ -109,7 +127,8 @@ public class CategoryServiceImpl implements CategoryService {
             response.setName(category.getName());
             response.setDescription(category.getDescription());
             response.setUserID(category.getUsers().getId());
-
+            response.setUserName(users.getName());
+            response.setUserEmail(users.getEmail());
             responses.add(response);
         }
 
@@ -118,24 +137,67 @@ public class CategoryServiceImpl implements CategoryService {
 
     @Override
     public List<CategoryResponse> getUserCategory() {
-
         Long userId = getLoggedInUserId();
 
-        return categoryRepository.findAll()
-                .stream()
-                .filter(c -> c.getUsers() != null && c.getUsers().getId().equals(userId))
+        List<Category> categories = categoryRepository.findByUsers_IdAndIsDeletedFalse(userId);
+
+        return categories.stream()
                 .map(c -> CategoryResponse.builder()
                         .id(c.getId())
                         .name(c.getName())
                         .description(c.getDescription())
-                        .userID(c.getUsers().getId())
+                        .userID(c.getUsers().getId())  // get ID from Users object
                         .build())
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    @Override
+    public List<CategoryResp> viewAllCategory() {
+        List<Category> categories = categoryRepository.findAll();
+
+        return categories.stream().map(cat -> {
+            CategoryResp resp = new CategoryResp();
+            resp.setId(cat.getId());
+            resp.setName(cat.getName());
+            resp.setDescription(cat.getDescription());
+
+            return resp;
+        }).collect(Collectors.toList());
+    }
+
+    @Override
+    public List<CategoryResponse> viewAllCategorywithUser() {
+        List<Category> categories = categoryRepository.findAll();
+
+        return categories.stream().map(cat -> {
+            CategoryResponse resp = new CategoryResponse();
+            resp.setId(cat.getId());
+            resp.setName(cat.getName());
+            resp.setDescription(cat.getDescription());
+
+            if (cat.getUsers() != null) {
+                resp.setUserID(cat.getUsers().getId());
+                resp.setUserName(cat.getUsers().getName());
+                resp.setUserEmail(cat.getUsers().getEmail());
+            }
+
+            return resp;
+        }).collect(Collectors.toList());
     }
 
     @Override
     public void deleteCategory(long categoryID) {
         categoryRepository.deleteById(categoryID);
+    }
+
+    @Override
+    public void deleteCategory(Long categoryId, Long userId) {
+
+        long deleted = categoryRepository.deleteByIdAndUsers_Id(categoryId, userId);
+
+        if (deleted == 0) {
+            throw new ResourceNotFoundException("Category not found for this user");
+        }
     }
 
     @Override
